# openheimer

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  core.go  flake.nix  go.mod  go.sum  ips.go  main.go  pinger.go  scanner.go
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  check.yaml  lint.yaml  nix-check.yaml  nix-lint.yaml  release.yaml  rust-check.yaml  rust-lint.yaml
database/: 000000000.data  config.json  meta.json
docs/: TODO.md
lib/: fetch.sh
src/: arguments.rs  configuration.rs  core.rs  logger.rs  logging.rs  main.rs  metadata.rs
src/arguments/: configuration.rs
src/database/: mod.rs  sqlite.rs
src/minecraft/: player.rs  server.rs
