cargo-features = ["trim-paths"]

[package]
name = "openheimer"
version = "2.0.0-alpha"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.7.1", features = ["git2"] }

[profile.release]
codegen-units = 1
lto = "fat"
trim-paths = "all"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "string"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
